model conclusion comments

--- a/lstm_stock_predictor_fng.ipynb
+++ b/lstm_stock_predictor_fng.ipynb
@@ -560,7 +560,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The model struggles to predict future prices based on fng values"
+    "# The model struggles to predict future prices based on fng values. \n",
+    "\n",
+    "# Between the two, LSTM predictions based on the closing prices show better trend following, just not at the same scale. "
    ]
   }
  ],
